--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>10</release>
+          <source>11</source>
+          <release>11</release>
         </configuration>
       </plugin>
       <plugin>
@@ -81,7 +82,7 @@
     <dependency>
       <groupId>net.dv8tion</groupId>
       <artifactId>JDA</artifactId>
-      <version>4.2.0_187</version>
+      <version>4.2.0_189</version>
     </dependency>
 
     <!--OTHER-->
